Fix background scroll on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -48,12 +48,21 @@ body {
   content: "";
   width: 100vw;
   height: 100%;
+  background-repeat: repeat-y;
   top: 0;
   left: 0;
   position: absolute;
   transform: translateZ(-1px) scale(2);
   z-index: -2;
   object-fit: cover;
+  margin-bottom: 100vh;
+}
+
+.App-header_img::after {
+  content: "";
+  height: 500px;
+  width: 100%;
+  background-color: aqua;
 }
 
 .regular-wrapper {
@@ -67,9 +76,10 @@ body {
   /* padding: 4rem; */
   width: 100vw;
   padding-bottom: 10rem;
-  /* height: 100vh; */
+  height: auto;
   background-color: var(--main-bg-color);
   display: flex;
+  flex-direction: column;
 }
 
 .mainBody {
