--- a/src/components/CardBox.css
+++ b/src/components/CardBox.css
@@ -1,6 +1,6 @@
 .CardBox {
-  width: 80vw;
-  height: 80vw;
+  width: 90vw;
+  height: 90vw;
   max-height: 450px;
   max-width: 450px;
   border-radius: 2rem;
