--- a/src/components/OuterBox.css
+++ b/src/components/OuterBox.css
@@ -9,8 +9,8 @@
 }
 
 .OuterBoxTop {
-  width: 80vw;
-  height: 40vw;
+  width: 90vw;
+  height: 45vw;
   max-height: 225px;
   max-width: 450px;
   display: flex;
@@ -61,7 +61,7 @@
 
 .BottomBox {
   color: var(--color-main);
-  height: 40vw;
+  height: 45vw;
   max-height: 225px;
   display: flex;
   justify-content: flex-end;
